Caricamento img e dep
Caricate svg stella logo e inkspot
più librerie di appoggio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="theme-color" content="#ffffff">
 </div>
 
-    <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="dependencies\bootstrap.min.css">
     <!--<link rel="stylesheet" href="style.css"> -->
     
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
@@ -201,7 +201,7 @@
                     <a class="nav-link" href="#">Features</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="threeJsSamples.html">threejs samples</a>
+                    <a class="nav-link" href="#">threejs samples</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link disabled" href="#">Disabled</a>
@@ -261,9 +261,9 @@
     </footer>
 
 
-    <script src="node_modules\lax.js\lib\lax.min.js"></script>
-    <script src="node_modules\jquery\dist\jquery.min.js"></script>
-    <script src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
+    <script src="dependencies\lax.min.js"></script>
+    <script src="dependencies\jquery.min.js"></script>
+    <script src="dependencies\dist\js\bootstrap.min.js"></script>
 
 
     <script>
