--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <a class="nav-link" href="#">Features</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">threejs samples</a>
+                    <a class="nav-link" href="bootstrapTemplate.html">Bootstrap template</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link disabled" href="#">Disabled</a>
