--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
                     <a class="nav-link" href="bootstrapTemplate.html">Bootstrap template</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                    <a class="nav-link" href="poligono_13.pdf" download="">Download</a>
+
                     </li>
                 </ul>
                 </div>
