Added internal link
add int link

--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
                 <ul class="navbar-nav innerNavbar">
                     <li class="nav-item active">
                     <a class="nav-link currentPage" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="#bottomPlace">GoToBottom</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="landingpage\index.html">Extended template example</a>
@@ -257,7 +260,7 @@
     <div class="toTopButton" id="toTop"><i class="fas fa-arrow-alt-circle-up"></i></div></span> </div>
 
     <footer class="rel d-flex" style="z-index:2">
-        <div></div>
+        <div id="bottomPlace"></div>
         <div></div>
         <div></div>
     </footer>
