--- a/index.html
+++ b/index.html
@@ -283,7 +283,28 @@
             3.Inserisco una toggleClass -tipo "active"- e inserisco della logica per determinare quando la classe viene rimossa e quando no.
     */
 
+    $(document).ready(function(){
+  // Add smooth scrolling to all links in navbar + footer link
+  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
 
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 900, function(){
+   
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
 
     // 0.INIZIALIZZAZIONE
     let navBHeight = $("#navbar").outerHeight(true);
