--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <a class="nav-link currentPage" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>                    
                     <li class="nav-item">
-                        <a class="nav-link" href="#bottomPlace">GoToBottom</a>
+                        <a class="nav-link" href="pricePage/whatweoffer.html">Our services</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="landingpage\index.html">Extended template example</a>
