d-flexed service Containers

--- a/pricePage/whatweoffer.html
+++ b/pricePage/whatweoffer.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+    <link rel="stylesheet" href="../dependencies/bootstrap.min.css">
 </head>
 <body>
     <h1>You can find our services in your browser's console</h1>
-    <ul id="servicesList"></ul>
+    <div id="servicesList"></div>
 
     <script src="offerScript.js"></script>
 </body>
