updated index to ajaxs

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <a class="nav-link" href="landingpage\index.html">Extended template example</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="bootstrapTemplate.html">Bootstrap template</a>
+                    <a class="nav-link" href="try.html">AjaxTrials</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="poligono_13.pdf" download="">Download</a>
