--- a/try.html
+++ b/try.html
@@ -13,7 +13,7 @@
 					if(ajaxRequest.status == 200){
 						//turn JSON into object
 						var jsonObj = JSON.parse(ajaxRequest.responseText);
-						Console.log(jsonObj);
+						console.log(jsonObj);
 						//get random object from array
 						/*
 						var randomMessagesArray = jsonObj.randomMessages;
