tries upon file upload

--- a/try.html
+++ b/try.html
@@ -5,6 +5,7 @@
 	
 	<script>
 		function getWelcome(){
+			console
 			var ajaxRequest = new XMLHttpRequest();
 			ajaxRequest.onreadystatechange = function(){
 			
