--- a/adminSecretAccess.html
+++ b/adminSecretAccess.html
@@ -38,7 +38,7 @@
                   <button id="sendImgBtn" class="btn btn-primary">Carica</button>
             </div>
         </form>
-        <form action="upload.php" method="post">
+        <form action="upload.php" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="imgFile">Inserisci il file</label>
                 <input type="file" name="imgFile" class="form-control-file" id="imgFile">
