--- a/adminSecretAccess.html
+++ b/adminSecretAccess.html
@@ -57,8 +57,8 @@
 
 
 
-<script src="node_modules\jquery\dist\jquery.min.js"></script>
-<script src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
+<script src="dependencies\jquery\dist\jquery.min.js"></script>
+<script src="dependencies\bootstrap\dist\js\bootstrap.min.js"></script>
 <script src="adminCrud.js"></script>
 </body>
 </html>
