--- a/adminSecretAccess.html
+++ b/adminSecretAccess.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClayPlayGround</title>
-    <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="dependencies\bootstrap\dist\css\bootstrap.min.css">
     <link rel="stylesheet" href="customStyle.css">
 </head>
 <body class="bodySecret">
@@ -38,7 +38,7 @@
                   <button id="sendImgBtn" class="btn btn-primary">Carica</button>
             </div>
         </form>
-        <form action="upload.php" method="post" enctype="multipart/form-data">
+        <form action="https://andreatalarico96.github.io/upload.php" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="imgFile">Inserisci il file</label>
                 <input type="file" name="imgFile" class="form-control-file" id="imgFile">
