--- a/adminSecretAccess.html
+++ b/adminSecretAccess.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClayPlayGround</title>
-    <link rel="stylesheet" href="dependencies\bootstrap\dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="dependencies\bootstrap.min.css">
     <link rel="stylesheet" href="customStyle.css">
 </head>
 <body class="bodySecret">
@@ -57,8 +57,7 @@
 
 
 
-<script src="dependencies\jquery\dist\jquery.min.js"></script>
-<script src="dependencies\bootstrap\dist\js\bootstrap.min.js"></script>
-<script src="adminCrud.js"></script>
+<script src="dependencies\jquery.min.js"></script>
+<script src="dependencies\bootstrap.min.js"></script>
 </body>
 </html>
